Color Picker: Dark Mode - Fix - Inner picker button border had a wrong color when there is no color value + remove old, irrelevant CSS from the old color picker swatches interface.

--- a/assets/dev/scss/direction/editor-dark-mode.scss
+++ b/assets/dev/scss/direction/editor-dark-mode.scss
@@ -72,6 +72,21 @@ body {
 	}
 }
 
+.pickr {
+	background-color: $theme-dark-gray-darkest;
+	border-color: $theme-dark-gray-light;
+}
+
+.e-control-color {
+
+	&--no-value {
+
+		.pcr-button {
+			border-color: $theme-dark-gray-light;
+		}
+	}
+}
+
 // Globals
 .e-global {
 
@@ -804,27 +819,6 @@ body.rtl .elementor-control-type-gallery {
 	}
 }
 
-//Color Picker
-.pickr {
-	background-color: $theme-dark-gray-darkest;
-	border-color: $theme-dark-gray-light;
-}
-
-.elementor-color-picker {
-
-	&__dropping-area {
-		border: 1px dashed $theme-dark-gray-lighter;
-		color: $theme-dark-gray-lightest;
-
-		&.elementor-active {
-			border-color: $theme-dark-gray-lightest;
-
-			i {
-				color: $theme-dark-danger;
-			}
-		}
-	}
-}
 
 //Structure Control
 .elementor-control-type-structure {
